# nse

./: .gitignore  CMakeLists.txt  readme.md  user.cmake.template
cmake_modules/: FindConfig++.cmake
include/: Checkpointing.h  FEMachinery.h  InputData.h  Integrators.h  NSOperators.h  NSSolver.h  ParallelTimer.h  ProblemSpecificSetup.h  SolverNS.h  TimeLevelFields.h  TimeStepper.h  Utils.h
include/config_reader/: ConfigReader.h  InputReader.h
include/problem_cases/: PCase_FPC_2D.h  PCase_LDC_2D.h  PCase_MMS_2D.h  PCase_Stokes_MMS_2D.h  ProblemCase.h
install_scripts/: mfem.sh  petsc.sh
src/: Checkpointing.cpp  FEMachinery.cpp  TimeLevelFields.cpp  frac.cpp  nse.cpp
xruns/: initiate_run.py
xruns/cases/: analyze.py  runex.sh
xruns/cases/fpc/: config.txt  fpc2d_mesh_0.geo  fpc_uns.geo  nova.sh
xruns/cases/fpc2/: config.txt  create_mesh.sh  fpc_uns.geo
xruns/cases/ldc/: clean.sh  config.txt  copyfiles.sh  create_mesh.sh  ldc_quad_bump.geo  ldc_tri_str.geo  ldc_tri_uns.geo  oscar.sh
xruns/cases/mms/: config.txt
xruns/cases/mms2/: config.txt  ns.petsc  runex.sh
xruns/scripts/: _exec_settings.py  _multirun_re_stab.py  exec_settings.py  multirun_cases.py  multirun_re_stab.py
